<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lockdownlife.Views.ui.home.HomeFrag"
        android:label="@string/navigation_Home"
        tools:layout="@layout/home_frag" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.lockdownlife.Views.ui.Info.InfoFragment"
        android:label="@string/navigation_Info"
        tools:layout="@layout/info_fragment" />

    <fragment
        android:id="@+id/nav_close"
        android:name="com.example.lockdownlife.Views.ui.close.CloseFrag"
        android:label="@string/navigation_Close"
        tools:layout="@layout/close_frag" />
</navigation>