<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="86dp">

    <ImageView
        android:id="@+id/iv_random"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <ImageView
        android:id="@+id/iv_notifications"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_notifications_active"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@id/iv_random"
        android:layout_toLeftOf="@+id/iv_notifications"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            tools:text="@string/tv_sleep_content_title"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="match_parent"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            tools:text="@string/tv_sleep_content_date_time"/>

        <TextView
            android:id="@+id/tv_repeat"
            android:layout_width="match_parent"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            tools:text="@string/tv_sleep_content_repeat"/>

    </LinearLayout>

</RelativeLayout>