<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lay_et_add_list"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <EditText
            android:id="@+id/et_add_list"
            android:layout_width="287dp"
            android:layout_height="153dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="top|left"
            android:hint="@string/tv_et_add_list"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="15dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/lay_et_add_list"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/empty_space"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:gravity="center_vertical"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/set_list_date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:onClick="chooseDate">

                <ImageView
                    android:id="@+id/iv_set_list_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_date_range" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_set_list_date"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_set_list_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_set_list_date"
                        android:textColor="@color/textColor"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_but"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/but_save_list"
                        android:layout_width="179dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:onClick="saveTask"
                        android:paddingVertical="15dp"
                        android:text="@string/tx_but_save"
                        android:textColor="@color/textColor" />

                    <Button
                        android:id="@+id/but_delete_list"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        android:onClick="deleteTask"
                        android:paddingVertical="15dp"
                        android:text="@string/tx_but_delete"
                        android:textColor="@color/textColor" />

                </LinearLayout>




            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
