<?xml version="1.0" encoding="utf-8"?>
<!--
LAYOUT
 REFERENCIA PARA SU CREACIÓN (EL VÍDEO COMPLETO EXPLICA COMO DEFINIR LA VISTA EN CARDVIEW)
 https://youtu.be/-YCUrHFUxlA
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Botón Sueño-->
            <androidx.cardview.widget.CardView
                android:id="@+id/button_sleep"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/sleep" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColor"
                        android:textStyle="bold"
                        android:text="@string/button_sleep" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Botón Lista-->
            <androidx.cardview.widget.CardView
                android:id="@+id/button_list"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/lista" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColor"
                        android:text="@string/button_lista"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Botón Calendario -->
            <androidx.cardview.widget.CardView
                android:id="@+id/button_calendar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/calendario" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColor"
                        android:text="@string/button_calendario"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Botón Comida-->
            <androidx.cardview.widget.CardView
                android:id="@+id/button_food"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/comida" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColor"
                        android:text="@string/button_comida"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Botón Ejercicio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/button_exercise"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/exercise" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColor"
                        android:text="@string/button_ejercicio"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Botón Descanso-->
            <androidx.cardview.widget.CardView
                android:id="@+id/button_relax"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/relax_big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textColor"
                        android:text="@string/button_descanso"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>